2007-09-10  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (run_second_stage_script): set date / time inside
	chroot with date command; it will be different by a few seconds.

2007-09-07  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: fix case where .ilist didn't exist before.
	
	* qemubuilder.c: fix typo from "Jean-Baptiste Note"
	<jbnote@gmail.com>
	(run_second_stage_script): get network device name with ifconfig
	and grep. Can I assume 'ethX' here?

2007-09-06  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (fork_qemu): change 'termination signal' to
	'termination message' so that it's not confusing.

2007-09-04  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: delete .ilist file if reuse flag is not set.

	* cowbuilder.c (cpbuilder_create): add cleanup code.

	* qemubuilder.c: cosmetic fixes.

2007-09-03  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (create_ext3_block_device): use mke2fs -F instead
	of yes|mke2fs
	(fork_qemu): do not handle fd '0', so that tty control can be
	done.  
	(fix_terminal): fix termios after exit from qemu, at least put
	echo on.
	(fork_qemu): Handle exit-codes.

2007-09-01  Junichi Uekawa  <dancer@debian.org>

	* Makefile (check-syntax): add check-syntax target for flymake mode.
	Remove redundant #include statements.

	* cowbuilder.c: run cowdancer-ilistcreate within chroot if it
	exists.

	* parameter.c: 
	* forkexec.c: move fork/exec code from parameter.c

	* tests/014_ilistdump_test.sh: rewrite testsuite to use the generic dumping code.
	* Makefile: install dumping code.
	* cowdancer-ilistdump.1: document
	* cowdancer-ilistdump.c: create dumping code, from testsuite data.

2007-08-31  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.1: add reference to cowdancer-ilistcreate
	* cowdancer-ilistcreate.1: document.
	* Makefile (install): install ilistcreate.
	* cowdancer-ilistcreate.c: create new command.

2007-08-29  Junichi Uekawa  <dancer@debian.org>
